Add validation and code review improvements
Co-authored-by: GuilhermeLuan <32211071+GuilhermeLuan@users.noreply.github.com>